@@ -20,8 +20,7 @@ public class PredictionEngine {
     public void addPoint(long tick, int exploredCells) {
         coveragePoints.add(new long[]{tick, exploredCells});
         while (coveragePoints.size() > MAX_POINTS) {
-            // Integration note: JDK 17 compatible replacement for List.removeFirst().
-            coveragePoints.remove(0);
+            coveragePoints.removeFirst();
         }
     }
 
@@ -82,8 +81,7 @@ public class PredictionEngine {
             return result;
         }
 
-        // Integration note: JDK 17 compatible replacement for List.getLast().
-        long[] latest = points.get(points.size() - 1);
+        long[] latest = points.getLast();
         long latestTick = latest[0];
         int latestExploredCells = (int) latest[1];
 
